--- a/Codigos/Análise de BCI/Linear combination of time series.ipynb
+++ b/Codigos/Análise de BCI/Linear combination of time series.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -15,18 +15,10 @@
     }
    ],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import sys\n",
     "sys.path.append('Scripts')\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -39,8 +31,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "from utils import path, batchVisualization, createInputFigure\n",
-    "from dataprep import dataprep\n",
+    "# from utils import path\n",
+    "from dataprep import CreateDatasetCSVList\n",
     "from SSVEPDataset import SSVEPDataset\n",
     "from classes import *\n",
     "from SSVEPDataloader import *\n",
@@ -54,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,29 +63,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "obs:\n",
+    "* script doesn't automatically creates the necessary folders\n",
+    "* put this into a script later"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataType = '512'\n",
-    "dataprep(dataType, outputPath = 'Originais_CCA')\n",
+    "dataType = '1280'\n",
+    "CreateDatasetCSVList(dataType, outputPath = 'Originais\\\\CCA')\n",
     "data = pd.read_csv('SSVEPDataset_'+dataType+'.csv')\n",
     "combData = pd.DataFrame(columns = ['subject', 'path', \"state\"])\n",
+    "\n",
     "for i in range(len(data)):\n",
-    "    indData = data.loc[i]\n",
-    "    sample = read_data(indData).values.T\n",
-    "#     sample = pd.read_csv(indData['path'], sep = ' ', usecols = range(16), names = range(1, 17), dtype = float)\n",
-    "    series = (sample[2] + sample[11])/2\n",
+    "    individualData = data.loc[i]\n",
+    "    sample = read_data(individualData).values.T\n",
     "    \n",
-    "#     for j in range(4, 16):\n",
-    "#         series += (0.4/13)*sample[j]\n",
+    "    combinedSeries = (sample[2] + sample[11])/2 # Depends on the specified electrodes\n",
     "        \n",
-    "    newPath = indData['path'].replace('Originais_CCA', 'Dados_BCI_Combinados')\n",
-    "    tempRow = pd.DataFrame([[indData['subject'], newPath, indData['state']]], columns = ['subject', 'path', 'state'])\n",
+    "    newPath = individualData['path'].replace('Originais\\\\CCA', 'Dados_BCI_Combinados')\n",
+    "    tempRow = pd.DataFrame([[individualData['subject'], newPath, individualData['state']]], columns = ['subject', 'path', 'state'])\n",
+    "    \n",
     "    combData = combData.append(tempRow)\n",
-    "    np.savetxt(newPath, series)\n",
-    "#     series.to_csv(newPath+\".csv\", index = False)\n",
+    "    np.savetxt(newPath, combinedSeries)\n",
     "\n",
     "combData.to_csv(\"SSVEPDatasetCombined_\"+dataType+\".csv\", index = False)"
    ]
