--- a/8 - Benchmark Classification.ipynb
+++ b/8 - Benchmark Classification.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -16,74 +23,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Project import Project"
+    "from Project import Project\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import torch.nn.functional as F\n",
+    "from torchsummary import summary\n",
+    "from itertools import product\n",
+    "import pickle\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "from Scripts.neuralnets.NNPreinstalledModelSelection import *\n",
+    "from Scripts.neuralnets.NNTrainingUtils import train, kfold_train\n",
+    "from Scripts.neuralnets.NNTrainingUtils import train_autoencoder\n",
+    "from Scripts.datahandling.BenchmarkDataset import BenchmarkDataset\n",
+    "from Scripts.datahandling.Dataloader import Dataloader\n",
+    "from Models.Autoencoder1 import Autoencoder\n",
+    "\n",
+    "ngpu = 1; device = torch.device(\"cuda:0\" if (torch.cuda.is_available() and ngpu > 0) else \"cpu\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "import torch.nn.functional as F\n",
-    "from torchsummary import summary\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
-    "from Scripts.data.DataLoading import get_image_dataloaders, get_image_dataset\n",
-    "from Scripts.data.SSVEPDataset import SSVEPDataset\n",
-    "from Scripts.data.SSVEPDataloader import SSVEPDataloader\n",
-    "from Scripts.neuralnets.NNPreinstalledModelSelection import *\n",
-    "from Scripts.neuralnets.NNTrainingUtils import train, kfold_train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ngpu = 1; device = torch.device(\"cuda:0\" if (torch.cuda.is_available() and ngpu > 0) else \"cpu\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Scripts.data.BenchmarkDataset import BenchmarkDataset\n",
-    "from Scripts.data.Dataloader import Dataloader"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = BenchmarkDataset(Project, classes = list(range(1, 20 + 1)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'train': 9792, 'val': 2448}\n"
+      "{'train': 2448, 'val': 612}\n"
      ]
     }
    ],
    "source": [
-    "batch_size = 256\n",
+    "batch_size = 64\n",
     "signal_length = 500\n",
+    "dataset = BenchmarkDataset(Project, signal_length, classes = list(range(1, 5 + 1)))\n",
     "dataloaders, dataset_sizes = Dataloader(dataset, batch_size)\n",
     "print(dataset_sizes)"
    ]
@@ -96,15 +74,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Training Directly With a CNN"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_type = 'resnet'; model_size = '18'; num_classes = 5; model_name = model_type + model_size\n",
-    "model = model_selection(model_name, num_classes)\n",
-    "model.conv1 = nn.Conv2d(1, 64, kernel_size = (7, 7), stride = (2, 2), padding = (3, 3), bias = False)\n",
-    "model = model.to(device)"
+    "def model_initializer():\n",
+    "    model_type = 'resnet'; model_size = '18'; num_classes = 5; model_name = model_type + model_size\n",
+    "    model = model_selection(model_name, num_classes, pretrained = False)\n",
+    "    model.conv1 = nn.Conv2d(1, 64, kernel_size = (7, 7), stride = (2, 2), padding = (3, 3), bias = False)\n",
+    "    model = model.to(device)\n",
+    "    return model\n",
+    "\n",
+    "def optimizer_initializer(model):\n",
+    "    return optim.Adam(model.parameters(), lr = 1e-3, weight_decay = 1e-5)\n",
+    "\n",
+    "def scheduler_initializer(optimizer):\n",
+    "    return optim.lr_scheduler.StepLR(optimizer, step_size = 10, gamma = 0.1)"
    ]
   },
   {
@@ -113,18 +106,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = optim.SGD(model.parameters(), lr = 0.001, momentum = 0.9)\n",
-    "criterion = nn.CrossEntropyLoss()\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size = 7, gamma = 0.1)"
+    "# optimizer = optim.SGD(model.parameters(), lr = 1e-3, momentum = 0.9)\n",
+    "criterion = nn.CrossEntropyLoss()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model, stats = kfold_train(Project, model, dataset, criterion, optimizer, num_epochs = 50, num_folds = 5, batch_size = batch_size)"
+    "name = 'Resnet18 - Not Pretrained - 2 Classes - Adam'\n",
+    "\n",
+    "model, stats = kfold_train(Project, model_initializer, dataset, criterion, optimizer_initializer, num_epochs = 50, num_folds = 5, batch_size = batch_size, log_name = name)"
    ]
   },
   {
@@ -135,26 +129,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from Scripts.neuralnets.NNTrainingUtils import train_autoencoder"
+    "#### Training With Autoencoders\n",
+    "\n",
+    "Parameters\n",
+    "\n",
+    "stride - s: \\[1, 2, 4, 8, 16\\]  \n",
+    "kernel - k: \\[3, 5, 7, 9, 11\\]  \n",
+    "feature_maps - fm: \\[1, 3\\]  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Models.Autoencoder1 import Autoencoder"
+    "def autoencoder_initializer(kernel_n, stride, n_feature_maps):\n",
+    "    model = Autoencoder(kernel_n = kernel_n, stride = stride, n_feature_maps = n_feature_maps).to(device)\n",
+    "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,44 +164,55 @@
       "----------------------------------------------------------------\n",
       "        Layer (type)               Output Shape         Param #\n",
       "================================================================\n",
-      "            Conv2d-1           [-1, 1, 64, 500]               6\n",
-      "              ReLU-2           [-1, 1, 64, 500]               0\n",
-      "         MaxPool2d-3  [[-1, 1, 64, 250], [-1, 1, 64, 250]]               0\n",
-      "       BatchNorm2d-4           [-1, 1, 64, 250]               2\n",
-      "       MaxUnpool2d-5           [-1, 1, 64, 500]               0\n",
-      "   ConvTranspose2d-6           [-1, 1, 64, 500]               6\n",
+      "            Conv2d-1           [-1, 3, 64, 500]              12\n",
+      "            Conv2d-2           [-1, 1, 64, 250]              10\n",
+      "              ReLU-3           [-1, 1, 64, 250]               0\n",
+      "         MaxPool2d-4  [[-1, 1, 64, 125], [-1, 1, 64, 125]]               0\n",
+      "       BatchNorm2d-5           [-1, 1, 64, 125]               2\n",
+      "       MaxUnpool2d-6           [-1, 1, 64, 250]               0\n",
+      "   ConvTranspose2d-7           [-1, 1, 64, 500]               4\n",
       "================================================================\n",
-      "Total params: 14\n",
-      "Trainable params: 14\n",
+      "Total params: 28\n",
+      "Trainable params: 28\n",
       "Non-trainable params: 0\n",
       "----------------------------------------------------------------\n",
       "Input size (MB): 0.12\n",
-      "Forward/backward pass size (MB): 1952.03\n",
+      "Forward/backward pass size (MB): 486.88\n",
       "Params size (MB): 0.00\n",
-      "Estimated Total Size (MB): 1952.15\n",
+      "Estimated Total Size (MB): 487.00\n",
       "----------------------------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "model = Autoencoder(kernel_n = 2, stride = , n_feature_maps = 1).to(device)\n",
+    "model = autoencoder_initializer(1, 2, 1)\n",
     "summary(model, (1, 64, int(signal_length)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "criterion = nn.MSELoss()\n",
-    "optimizer = optim.SGD(model.parameters(), lr = 0.001, momentum = 0.9)\n",
+    "optimizer = optim.SGD(model.parameters(), lr = 1e-3, momentum = 0.9)\n",
+    "# optimizer = optim.Adam(model.parameters(), lr = 1e-3, weight_decay = 1e-5)\n",
     "# scheduler = optim.lr_scheduler.StepLR(optimizer, step_size = 5, gamma = 0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,8 +240,9 @@
     "        \n",
     "    def forward(self, x):\n",
     "        with torch.set_grad_enabled(False):\n",
+    "#             x = self.normalize(self.encoder(x))\n",
     "            x = self.encoder(x)\n",
-    "        \n",
+    "            \n",
     "        x = self.classifier(x)\n",
     "        \n",
     "        return x"
@@ -238,11 +250,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_type = 'resnet'; model_size = '18'; num_classes = 20; model_name = model_type + model_size\n",
+    "model_type = 'resnet'; model_size = '18'; num_classes = 5; model_name = model_type + model_size\n",
     "classifier = model_selection(model_name, num_classes)\n",
     "classifier.conv1 = nn.Conv2d(1, 64, kernel_size = (7, 7), stride = (2, 2), padding = (3, 3), bias = False)\n",
     "encoder = model.encoder\n",
@@ -251,22 +263,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = optim.SGD(hybrid.parameters(), lr = 0.001, momentum = 0.9)\n",
+    "# optimizer = optim.SGD(hybrid.parameters(), lr = 1e-3, momentum = 0.9)\n",
+    "optimizer = optim. Adam(hy)\n",
     "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size = 5, gamma = 0.5)\n",
     "criterion = nn.CrossEntropyLoss()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hybrid, stats = kfold_train(Project, hybrid, dataset, criterion, optimizer, num_epochs = 50, num_folds = 5)"
+    "hybrid, stats = kfold_train(Project, hybrid, dataset, criterion, optimizer, num_epochs = 10, num_folds = 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Autoencoder(nn.Module):\n",
+    "    def __init__(self, stride, kernel_n, n_feature_maps = 3):\n",
+    "        super(Autoencoder, self).__init__()\n",
+    "        n1 = kernel_n\n",
+    "        s = stride\n",
+    "        self.encoder = nn.Sequential(\n",
+    "            nn.Conv2d(1, n_feature_maps, kernel_size = (1, 2*n1 + 1), padding = (0, n1), stride = (1, s)),\n",
+    "            nn.ReLU(inplace = True),\n",
+    "        )\n",
+    "        \n",
+    "        self.pool    = nn.MaxPool2d(kernel_size = (1, 2), stride = (1, 2), return_indices = True)\n",
+    "        self.batch_norm = nn.BatchNorm2d(n_feature_maps)\n",
+    "        self.unpool  = nn.MaxUnpool2d(kernel_size = (1, 2), stride = (1, 2))\n",
+    "        \n",
+    "        self.decoder = nn.Sequential(\n",
+    "            nn.ConvTranspose2d(n_feature_maps, 1, kernel_size = (1, 2*n1 + 1), padding = (0, n1), stride = (1, s), output_padding = (0, s - 1))\n",
+    "        )\n",
+    "        \n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = self.encoder(x)\n",
+    "        x, _2 = self.pool(x)\n",
+    "        x = self.batch_norm(x)\n",
+    "        x = self.unpool(x, _2)\n",
+    "        x = self.decoder(x)\n",
+    "        \n",
+    "        return x\n",
+    "    \n",
+    "    def encode(self, x):\n",
+    "        with torch.set_grad_enabled(False):\n",
+    "            x = self.encoder(x)\n",
+    "            x, _ = self.pool(x)\n",
+    "            x = self.batch_norm(x)\n",
+    "            \n",
+    "        return x\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def autoencoder_initializer(kernel_n, stride, n_feature_maps):\n",
+    "    model = Autoencoder(kernel_n = kernel_n, stride = stride, n_feature_maps = n_feature_maps).to(device)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hybrid_initializer():\n",
+    "    classifier = model_selection(model_name, num_classes)\n",
+    "    classifier.conv1 = nn.Conv2d(fm, 64, kernel_size = (7, 7), stride = (2, 2), padding = (3, 3), bias = False)\n",
+    "    encoder = model.encoder\n",
+    "    hybrid = HybridModel(classifier, encoder).to(device)\n",
+    "    return hybrid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def optimizer_initializer(model):\n",
+    "    return optim.SGD(model.parameters(), lr = 1e-3, momentum = 0.9)\n",
+    "\n",
+    "def scheduler_initializer(optimizer):\n",
+    "    return optim.lr_scheduler.StepLR(optimizer, step_size = 10, gamma = 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "S = [1]\n",
+    "K = [1, 3, 5]\n",
+    "FM = [1, 3]\n",
+    "model_type = 'resnet'; model_size = '18'; num_classes = 5; model_name = model_type + model_size\n",
+    "\n",
+    "for (s, k, fm) in product(S, K, FM):\n",
+    "    # Autoencoder Training\n",
+    "    model = Autoencoder(kernel_n = k, stride = s, n_feature_maps = fm).to(device)\n",
+    "    criterion = nn.MSELoss()\n",
+    "    optimizer = optim.SGD(model.parameters(), lr = 1e-3, momentum = 0.9)\n",
+    "    scheduler = optim.lr_scheduler.StepLR(optimizer, step_size = 10, gamma = 0.5)\n",
+    "    name = 'Autoencoder - s = {} k = {} fm = {} - 5 classes'.format(s, k, fm)\n",
+    "    model, stats = train_autoencoder(Project, model, dataloaders, dataset_sizes, criterion, optimizer, num_epochs = 60, log_name = name, scheduler = scheduler)\n",
+    "    \n",
+    "    with open('Outputs/'+name+' - stats', 'wb') as stats_file:\n",
+    "        pickle.dump(stats, stats_file)\n",
+    "        \n",
+    "    # Classifier training\n",
+    "\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "    name = 'ResNet50 - N-TL - ' + name\n",
+    "    hybrid, stats = kfold_train(Project, hybrid_initializer, dataset, criterion, optimizer_initializer, num_epochs = 30, num_folds = 5, log_name = name)\n",
+    "    \n",
+    "    with open('Outputs/'+name+' - stats', 'wb') as stats_file:\n",
+    "        pickle.dump(stats, stats_file)\n",
+    "    \n",
+    "    del model\n",
+    "    del hybrid\n",
+    "    del stats"
    ]
   },
   {
